# simple-game-engine-sdl-cpp

./: .gitignore  CMakeLists.txt  README.md
assets/configs/: game.lua  input.lua  network.lua  sound.lua  video.lua
assets/fonts/common/: index.lua
assets/graphics/common/: index.lua
assets/nametable/common/: generic.lua  generic.nametable  index.lua  intro.lua  intro.nametable  title.lua  title.nametable
assets/nametable/levels/: level1.lua  lvl1.nametable
assets/screens/: intro.lua  title.lua
assets/sounds/common/: index.lua
documentation/: GraphicAsset.md  Plugin.md  Table.md
include/glm/: CMakeLists.txt  Makefile  cmake_install.cmake
include/sol/: CMakeLists.txt  Makefile  cmake_install.cmake  forward.hpp  sol.hpp
src/: Main.cpp
src/Core/: AssetManager.cpp  AssetManager.h  BeanManager.cpp  BeanManager.h  ConfigManager.h  Constants.h  Game.cpp  Game.h  PluginManager.cpp  PluginManager.h  TableManager.cpp  TableManager.h
src/Core/Assets/: AssetCursorConfig.h  FontAsset.h  GraphicAsset.h  InputAsset.h  SoundAsset.h
src/Core/Assets/Lua/: FontAssetLoader.h  GraphicAssetLoader.h  SoundAssetLoader.h
src/Core/Config/: GameConfig.h  InputConfig.h  NetworkConfig.h  PluginConfig.h  SoundConfig.h  VideoConfig.h
src/Core/Config/Lua/: GameConfigLoader.h  InputConfigLoader.h  LuaMapper.cpp  LuaMapper.h  PluginConfigLoader.h  SoundConfigLoader.h  VideoConfigLoader.h
src/Core/Plugins/: DebugPlugin.h  LayerPlugin.h  Plugin.h
src/Core/Renderer/: DebugRenderer.cpp  DebugRenderer.h  NameTableRenderer.cpp  NameTableRenderer.h  PluginRenderer.cpp  PluginRenderer.h  Renderer.h  ScreenRenderer.cpp  ScreenRenderer.h
src/Core/Table/: LayerTable.cpp  LayerTable.h  NameTable.cpp  NameTable.h  PatternTable.cpp  PatternTable.h
src/Core/Table/Config/: LayerTableConfig.h  NameTableConfig.h
src/Core/Utils/: Color.h  LayerUtils.h  LuaUtils.h  Position.h  SdlEnumMapper.h  StringUtils.h  TextureUtils.h  WaitEvent.h
src/Plugin/Controller/: MousePlugin.cpp  MousePlugin.h
src/Plugin/Debug/: DebugKeyEvent.cpp  DebugKeyEvent.h
src/Plugin/Layer/: AnimationLayerPlugin.cpp  AnimationLayerPlugin.h  SolidLayerPlugin.cpp  SolidLayerPlugin.h
src/Plugin/Screen/: ScreenIntro.cpp  ScreenIntro.h  ScreenLoader.h  ScreenPlugin.cpp  ScreenPlugin.h
src/Plugin/Screen/Config/: IntroConfig.h  OptionsConfig.h  TitleConfig.h
src/Plugin/Screen/Intro/: ScreenIntro.cpp  ScreenIntro.h
src/Plugin/Screen/Options/: ScreenOptions.cpp  ScreenOptions.h
src/Plugin/Screen/Score/: ScreenScore.cpp  ScreenScore.h
src/Screen/: ScreenLoader.h  ScreenPlugin.cpp  ScreenPlugin.h
src/Screen/Config/: ScoreConfig.h  ScreenConfig.h  TitleConfig.h
src/Screen/Intro/: ScreenIntro.cpp  ScreenIntro.h
src/Screen/Options/: ScreenOptions.cpp  ScreenOptions.h
src/Screen/Score/: ScreenScore.cpp  ScreenScore.h
src/Screen/Title/: ScreenTitle.cpp  ScreenTitle.h
tests/: CMakeLists.txt  README.md
tests/DocTest/: GameTest.cpp
tests/DocTest/Core/: AssetManagerTest.cpp
tests/doctest/: doctest.h
(+15 files in other folders)
